Fixed split button caret icon alignment

--- a/packages/sdk/ui-react/src/widget/splitButton/splitButton.scss
+++ b/packages/sdk/ui-react/src/widget/splitButton/splitButton.scss
@@ -113,7 +113,7 @@
 
   &:before {
     display: inline-block;
-    height: 7px;
+    height: 11px;
     width: 9px;
     -webkit-mask-size: 9px;
     -webkit-mask: url('../../media/ic_chevron_up.svg');
